syntax = "proto3";

package br.com.grpc.user;

option java_multiple_files = true;
option java_package = "br.com.grpc.user.proto";
option java_outer_classname = "UserServiceProto";

// Definição do serviço de usuários
service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUsersByStatus(GetUsersByStatusRequest) returns (stream UserResponse);
}

// Mensagens de requisição
message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
  UserStatus status = 4;
}

message GetUserRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  UserStatus status = 5;
}

message DeleteUserRequest {
  int64 id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 size = 2;
}

message GetUsersByStatusRequest {
  UserStatus status = 1;
}

// Mensagens de resposta
message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  UserStatus status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message ListUsersResponse {
  repeated UserResponse users = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 size = 4;
}

// Enums
enum UserStatus {
  UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
  SUSPENDED = 3;
}